Fix routing and error can't load movie list

--- a/src/app/component/movie/list-movie/list-movie.component.html
+++ b/src/app/component/movie/list-movie/list-movie.component.html
@@ -118,7 +118,7 @@
                                                     <ul>
                                                         <li><a routerLink="/detail-movie/{{movie.id}}">Chi tiết</a>
                                                         </li>
-                                                        <li><a routerLink="/selectedShowTime/{{movie.id}}">Đặt vé</a>
+                                                        <li><a routerLink="/movie/{{movie.id}}/showtime">Đặt vé</a>
                                                         </li>
                                                     </ul>
                                                 </div>
