--- a/src/app/component/show-time/selected-seat/selected-seat.component.html
+++ b/src/app/component/show-time/selected-seat/selected-seat.component.html
@@ -63,6 +63,6 @@
             </div>
         </div>
     </div>
-
+</div>
 
     <app-create-booking *ngIf="isDisplay" [seatMovieDTO]="movieSeatDTO"></app-create-booking>
