--- a/src/app/component/user/list-member/list-member.component.html
+++ b/src/app/component/user/list-member/list-member.component.html
@@ -26,7 +26,7 @@
             <td style="box-sizing: border-box; font-family: 'Poppins', sans-serif;">{{member.email}} </td>
             <td style="box-sizing: border-box; font-family: 'Poppins', sans-serif;">{{member.address}}</td>
             <td>
-                <a [routerLink]="['/update/',member.id]" class="detailButton">
+                <a [routerLink]="['/edit/',member.id]" class="detailButton">
                     <i style="color: blue" class="fa fa-edit"></i>
                 </a>
             </td>
