--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+
+    <app-navbar></app-navbar>
+
+
+    <router-outlet></router-outlet>
+
+<ng-template [ngIf]="isMember()">
+    <app-footer></app-footer>
+</ng-template>
+
