--- a/src/app/component/user/update-member/update-member.component.html
+++ b/src/app/component/user/update-member/update-member.component.html
@@ -79,7 +79,7 @@
                 <label for="email" class="col-sm-2 col-form-label">Email <span
                         style="color: red"    class="required-field">*</span></label>
                 <div class="col-sm-10">
-                    <input type="text" id="email" name="email" formControlName="email"
+                    <input type="email" id="email" name="email" formControlName="email"
                            class="form-control">
                     <small class="form-text text-danger"
                            *ngIf="updateMember.get('email')?.hasError('required')  && updateMember.get('email')?.touched">
@@ -104,7 +104,7 @@
             <div class="row mt-5">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-10 text-center">
-                    <button style="margin-right: 200px;" routerLink="/member" type="button" class="btn btn-secondary mr-4" >Trở lại</button>
+                    <button style="margin-right: 200px;" routerLink="management/member" type="button" class="btn btn-secondary mr-4" >Trở lại</button>
                     <button class="btn btn-primary ml-4" type="submit">Sửa</button>
                 </div>
             </div>
