updated sidebar and fix some tables

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 
-    <app-navbar></app-navbar>
+<!--    <app-navbar></app-navbar>-->
 
+    <app-sidebar-admin></app-sidebar-admin>
 
     <router-outlet></router-outlet>
 
