--- a/src/app/component/user/list-member/list-member.component.html
+++ b/src/app/component/user/list-member/list-member.component.html
@@ -2,8 +2,8 @@
     <div class="prs_heading_section_wrapper" style="margin-bottom: 40px; margin-top: -100px">
 
     </div>
-    <h2 class="text-center">Danh Sách Phim</h2>
-    <table class="table table-hover table-striped table-bordered table-responsive text-center">
+    <h2 class="text-center">Danh Sách Thành Viên</h2>
+    <table class="table table-hover table-striped table-bordered text-center">
         <thead class="thead-dark">
         <tr style="box-sizing: border-box; font-family: 'Poppins', sans-serif;">
             <th style="text-align: center;">STT</th>
