--- a/src/app/component/display/sidebar-admin/sidebar-admin.component.css
+++ b/src/app/component/display/sidebar-admin/sidebar-admin.component.css
@@ -1,24 +1,5 @@
-li.text-hover {
-    margin-bottom: 25px;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-}
-
-.list-sidebars > li {
-    margin-bottom: 25px;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-}
-
-.list-sidebars > li.text-hover:hover {
-    -webkit-transform: translateX(8px);
-    transform: translateX(8px);
-}
-
 .sidebars-title{
-    color: #333;
+    color: white;
     font-size: 18px;
     line-height: 22px;
     font-weight: bold;
@@ -28,4 +9,49 @@ li.text-hover {
 .sidebars-logout:hover {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+#sidebar {
+    position: fixed;
+    width: 15%;
+    height: 100%;
+    left: -15%;
+    transition: 0.5s;
+    background-color: black;
+}
+
+#sidebar li {
+    color: white;
+    margin-bottom: 25px;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+}
+
+#sidebar li:hover {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px);
+}
+
+.toggle-btn {
+    position: absolute;
+    left: 100%;
+    top: 15px;
+}
+
+.toggle-btn span {
+    display: block;
+    background-color: black;
+    width: 30px;
+    height: 5px;
+    margin: 3px;
+}
+
+#sidebar.active{
+    left: 0;
 }
