--- a/src/app/component/user/statistic-user/statistic-user.component.html
+++ b/src/app/component/user/statistic-user/statistic-user.component.html
@@ -1,6 +1,6 @@
 <div class="container align-items-center">
     <h2 class="text-center">Thống kê thành viên</h2>
-    <table class="table table-striped table-bordered table-responsive text-center">
+    <table class="table table-striped table-bordered text-center">
         <thead class="thead-dark">
         <tr>
             <th>Mã thành viên</th>
