--- a/src/app/component/display/sidebar-admin/sidebar-admin.component.html
+++ b/src/app/component/display/sidebar-admin/sidebar-admin.component.html
@@ -8,7 +8,7 @@ toggleMenu()">
         <span></span>
     </div>
     <span>
-        <img width="50px" src="https://flaticons.net/icon.php?slug_category=people&slug_icon=employee">
+        <img width="50px" src="http://cdn.onlinewebfonts.com/svg/img_173956.png">
     </span>
     <span style="margin-left: 40px; font-size: 30px"
           class="sidebars-title">{{authService.getFullName()}}</span>
