--- a/src/app/component/user/list-employee/list-employee.component.html
+++ b/src/app/component/user/list-employee/list-employee.component.html
@@ -29,7 +29,7 @@
                             aria-label="Salary: activate to sort column ascending" style="width: 109px;">Địa chỉ
                         </th>
                         <th class="sorting" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1"
-                            aria-label="Salary: activate to sort column ascending" style="width: 109px;">Chức năng
+                            aria-label="Salary: activate to sort column ascending" style="width: 80px;">Chức năng
                         </th>
 
                     </tr>
@@ -47,13 +47,14 @@
                         <td>{{employee.phoneNumber}}</td>
                         <td>{{employee.address}}</td>
                         <td class="edit-user">
-                            <a [routerLink]="'/update/' + employee.id" class="btn btn-warning" style="color: white">Sửa</a>
-                            <a [routerLink]="'delete/' + employee.id" class="btn btn-danger" style="margin-left: 7px; color: white">Xóa</a>
+                            <a [routerLink]="'/update/' + employee.id" class="btn btn-warning" style="color: white; margin-left: 15px">Sửa</a>
+
                         </td>
 
                     </tr>
 
                     </tbody>
+
                 </table>
                 <pagination-controls (pageChange)="curPage = $event"
                                      [directionLinks]=true
