--- a/src/app/component/user/list-employee/list-employee.component.html
+++ b/src/app/component/user/list-employee/list-employee.component.html
@@ -60,8 +60,8 @@
                                      [directionLinks]=true
                                      [autoHide]=true
                                      [responsive]=true
-                                     previousLabel="Previous"
-                                     nextLabel="Next"
+                                     previousLabel="Về"
+                                     nextLabel="Tiếp"
                                      screenReaderPaginationLabel="Pagination"
                                      screenReaderPageLabel="page"
                                      screenReaderCurrentLabel="You're on page">
