Update Pagination Background Color (No commit Node_modules)

--- a/src/app/component/user/statistic-user/statistic-user.component.html
+++ b/src/app/component/user/statistic-user/statistic-user.component.html
@@ -23,7 +23,7 @@
         </tr>
         </tbody>
     </table>
-    <pagination-controls class="text-right"
+    <pagination-controls class="text-right my-pagination"
                          (pageChange)="currentPage = $event"
                          previousLabel="Trước"
                          nextLabel="Sau"
