--- a/src/app/component/movie/statistic-movie/statistic-movie.component.html
+++ b/src/app/component/movie/statistic-movie/statistic-movie.component.html
@@ -19,7 +19,7 @@
         </tr>
         </tbody>
     </table>
-    <pagination-controls class="text-right"
+    <pagination-controls class="text-right my-pagination"
                          (pageChange)="currentPage = $event"
                          previousLabel="Trước"
                          nextLabel="Sau"
