--- a/src/app/component/ticket/ticket-receipt-confirmation/ticket-receipt-confirmation.component.html
+++ b/src/app/component/ticket/ticket-receipt-confirmation/ticket-receipt-confirmation.component.html
@@ -57,7 +57,7 @@
                     </button>
                     <a *ngIf="checkStatus" type="button" class="btn text-light"
                        style="background: #26B99A; color: white;"
-                       [routerLink]="['management/booking']">Quay lại
+                       [routerLink]="['/management/booking']">Quay lại
                     </a>
                 </div>
             </td>
