--- a/src/app/component/user/update-employee/update-employee.component.html
+++ b/src/app/component/user/update-employee/update-employee.component.html
@@ -108,5 +108,5 @@
         </small>
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Sửa</button>
 </form>
